# drawme

./: Cargo.toml  README.md
examples/: clipped_circle.rs  scratch.rs  simple_circle.rs
src/: lib.rs  macros.rs  placement.rs
src/canvas/: debug.rs  mod.rs
src/canvas/svg/: mod.rs  node.rs  xml.rs
src/canvas/xml/: mod.rs  node.rs  svg_el.rs
src/color/: defaults.rs  gradient.rs  mod.rs  paint.rs  rgb.rs  rgba.rs  solid.rs
src/draw/: mod.rs
src/drawable/: mod.rs
src/drawing/: command.rs  inherited_draw_style.rs  mod.rs
src/drawing/iter/: instruction.rs  mod.rs
src/image/: mod.rs
src/old_text/: mod.rs  style.rs
src/old_text/font/: README.md  font_source.rs  font_style.rs  line_height.rs  mod.rs
src/placement/: axes.rs  bbox.rs  direction.rs  mod.rs  point.rs  relative.rs  rotation.rs  vector.rs
src/primitives/: circle.rs  mod.rs  path.rs  rectangle.rs  rounded_rectangle.rs
src/shapes/: circle.rs  mod.rs
src/style/: fill.rs  mod.rs  stroke.rs
src/text/: builder.rs  mod.rs  position.rs  textbox.rs
src/text/font/: engine.rs  mod.rs
tests/: simple_circle.rs
