[package]
name = "drawme"
version = "0.0.0"
edition = "2021"

[features]
default = ["svg"]
svg = ["dep:quick-xml"]
serde = [
    "dep:serde",
    "nalgebra/serde-serialize",
    "url/serde",
    "quick-xml/serde",
]
quick-xml = ["dep:quick-xml"]

[dependencies]
fontdb = "0.23.0"
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
quick-xml = { version = "0.37.2", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
url = "2.5.4"
