[package]
name = "drawme"
version = "0.0.0"
edition = "2021"
authors = ["dsgallups <dsgallups@protonmail.com>"]
description = "Static 2d rendering engine skia alternative"
repository = "https://github.com/dsgallups/drawme"
documentation = "https://docs.rs/drawme"
readme = "README.md"
keywords = ["2d", "rendering"]
categories = ["graphics", "gui", "rendering::engine"]
license = "MIT OR Apache-2.0"

[features]
default = ["svg"]
svg = ["dep:quick-xml"]
serde = [
    "dep:serde",
    "nalgebra/serde-serialize",
    "url/serde",
    "quick-xml/serde",
]
quick-xml = ["dep:quick-xml"]

[dependencies]
fontdb = "0.23.0"
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
quick-xml = { version = "0.37.2", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
url = "2.5.4"
