[package]
name = "drawme"
version = "0.0.0"
edition = "2021"
authors = ["dsgallups <dsgallups@protonmail.com>"]
description = "Static 2d rendering engine skia alternative"
repository = "https://github.com/dsgallups/drawme"
documentation = "https://docs.rs/drawme"
readme = "README.md"
keywords = ["2d", "rendering"]
categories = ["graphics", "gui", "rendering::engine"]
license = "MIT OR Apache-2.0"

[features]
default = ["svg", "xml"]
svg = ["dep:regex"]
xml = ["dep:quick-xml"]
serde = [
    "dep:serde",
    "nalgebra/serde-serialize",
    "url/serde",
    "quick-xml/serde",
]
debug = []

[dependencies]
cosmic-text = "0.12.1"
fontdb = "0.23.0"
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
num-traits = "0.2.19"
quick-xml = { version = "0.37.2", default-features = false, optional = true }
regex = { version = "1.11.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
url = "2.5.4"

[dev-dependencies]
pretty_assertions = "1.4.1"
